--- a/nginx.example.conf
+++ b/nginx.example.conf
@@ -13,7 +13,7 @@ events {
 
 http {
     include       mime.types;
-    default_type  application/octet-stream
+    default_type  application/octet-stream;
     sendfile        on;
     keepalive_timeout  65;
 
